Fixed spacing

--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-
-
 body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  background: linear-gradient(
+    109.6deg,
+    rgb(220, 196, 252) 11.2%,
+    rgb(150, 199, 253) 100.2%
+  );
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,9 +25,12 @@ body {
   width: 100%;
   max-width: 650px;
   margin: 50px 0;
+  padding-right: 40px;
 }
 
-header, main, footer {
+header,
+main,
+footer {
   width: 100%;
   text-align: center;
 }
@@ -43,6 +48,7 @@ header, main, footer {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+  padding-right: 20px;
 }
 
 .city-name {
